--- a/index.ipynb
+++ b/index.ipynb
@@ -71,12 +71,10 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "travel_month = January\"# \"January\""
+    "travel_month = \"January\" # \"January\""
    ]
   },
   {
@@ -99,10 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "number_of_weeks = 3 # 3"
